--- a/package.json
+++ b/package.json
@@ -7,10 +7,19 @@
     "dev": "nodemon ./bin/www -e .js,.hbs"
   },
   "dependencies": {
+    "bcrypt": "^5.0.0",
+    "cloudinary": "^1.22.0",
+    "connect-flash": "^0.1.1",
+    "dotenv": "^8.2.0",
+    "express": "^4.17.1",
+    "express-session": "^1.17.0",
+    "hbs": "^4.1.0",
+    "moment": "^2.24.0",
+    "mongoose": "^5.8.10",
+    "multer": "^1.4.2",
+    "multer-storage-cloudinary": "^4.0.0",
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
-    "express": "~4.16.1",
-    "hbs": "^4.1.1",
     "http-errors": "~1.6.3",
     "morgan": "~1.9.1"
   }
